Bug 1920302 - Do not start timer repeatedly for watchPosition r=smaug

Removing timerRestartWatch, which is added by bug 489813 to make watchPosition time out multiple times. This patch is reverting that behavior and adding a replacement WPT test.

Differential Revision: https://phabricator.services.mozilla.com/D243808